# mapchete-eo

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  LICENSE  README.md  README.rst  pyproject.toml  pytest.ini  readthedocs.yaml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: docs.yml  python-package.yml  python-publish.yml
doc/: Makefile
doc/source/: conf.py  configuration_parameters.rst  examples.rst  index.rst
docs/source/: cli.rst  conf.py  examples.rst  index.rst
examples/: first_pixel_process.py  sentinel-2_2025-may-june_first_pixel.mapchete
mapchete_eo/: base.py  caching.py  eostac.py  exceptions.py  geometry.py  image_compositing.py  image_operations.py  known_archives.py  known_catalogs.py  models.py  product.py  protocols.py  sentinel2.py  settings.py  sort.py  time.py  types.py
mapchete_eo/archives/: base.py
mapchete_eo/array/: buffer.py  color.py  convert.py  resampling.py
mapchete_eo/brdf/: __init__.py  brdf.py  config.py  models.py  settings.py  tools.py
mapchete_eo/cli/: __init__.py  main.py  options_arguments.py  s2_brdf.py  s2_cat_results.py  s2_find_broken_products.py  s2_jp2_static_catalog.py  s2_mask.py  s2_rgb.py  s2_verify.py  static_catalog.py
mapchete_eo/image_operations/: blend_functions.py  color_correction.py  compositing.py  dtype_scale.py  fillnodata.py  filters.py  linear_normalization.py  sigmodial.py  sigmoidal.py
mapchete_eo/image_operations/blend_modes/: blending_functions.py  type_checks.py
mapchete_eo/io/: __init__.py  assets.py  caching.py  geometry.py  item.py  items.py  levelled_cubes.py  mapchete_io_raster.py  path.py  products.py  slice_generator.py  to_np_array.py  to_xarray.py
mapchete_eo/processes/: config.py  dtype_scale.py  eoxcloudless_mosaic.py  eoxcloudless_mosaic_merge.py  eoxcloudless_rgb_map.py  eoxcloudless_scl_mosaic.py  eoxcloudless_sentinel2_color_correction.py  merge_rasters.py
mapchete_eo/search/: __init__.py  base.py  config.py  s2_mgrs.py  stac_search.py  stac_static.py  utm_search.py
mapchete_eo/time/: __init__.py  _time.py
mapchete_eo/utils/: _get_sentinel2.py  _raster.py  time.py  tools.py
src/mapchete_eo/: __init__.py  base.py  eostac.py  known_archives.py  known_catalogs.py  sentinel2.py  staged_catalog.py  time.py
src/mapchete_eo/archives/: base.py
src/mapchete_eo/cli/: main.py
src/mapchete_eo/discovery/: __init__.py  base.py  stac_search.py  stac_static.py
src/mapchete_eo/io/: __init__.py  convert.py  to_xarray.py
src/mapchete_eo/processes/: eo_to_xarray.py
src/mapchete_eo/read/: __init__.py  _functions.py
src/mapchete_eo/search/: base.py  stac_search.py  stac_static.py
src/mapchete_eo/storages/: s2aws_cog.py
tests/: conftest.py  test_archives.py  test_array.py  test_brdf.py  test_caching.py  test_catalog.py  test_cli.py  test_data_collections.py  test_discovery_stac_search.py  test_discovery_stac_static.py  test_eostac.py  test_geometry.py  test_image_compositing.py  test_image_filters.py  test_image_operations_compositing.py  test_image_operations_sigmoidal.py  test_io.py  test_io_assets.py  test_io_masks.py  test_io_to_np_array.py  test_io_to_xarray.py  test_know_catalogs.py  test_known_catalogs.py  test_platforms_sentinel2_metadata_parser.py  test_processes.py  test_product.py  test_read_functions.py  test_s2_mgrs.py  test_sentinel2.py  test_sentinel2_brdf.py  test_sentinel2_masks.py  test_sentinel2_metadata_parser.py  test_sentinel2_product.py
tests/image_operations/: test_blend_functions.py  test_blend_modes.py  test_blend_modes_type_checks.py  test_compositing.py  test_dtype_scale.py  test_fillnodata.py  test_linear_normalization.py
tests/testdata/: 14-3758-17876.geojson  eoxcloudless_8bit_dtype_scale.mapchete  eoxcloudless_mosaic.mapchete  eoxcloudless_mosaic_regions_merge.mapchete  eoxcloudless_mosaic_s2jp2.mapchete  eoxcloudless_mosaic_s2jp2_antimeridian_east.mapchete  eoxcloudless_mosaic_s2jp2_antimeridian_west.mapchete  eoxcloudless_mosaic_s2jp2_east.mapchete  eoxcloudless_sentinel2_color_correction.mapchete  eoxcloudless_sentinel2_rgb_map.mapchete  merge_rasters.mapchete  read_xarray.py  region1-aoi.fgb  region2-aoi.fgb  sentinel2.mapchete  sentinel2_antimeridian_east.mapchete  sentinel2_antimeridian_west.mapchete  sentinel2_area.mapchete  sentinel2_aws_cdse.mapchete  sentinel2_cdse.mapchete  sentinel2_cloud_cover.mapchete  sentinel2_csde.mapchete  sentinel2_jp2_static_catalog.mapchete  sentinel2_mercator.mapchete  sentinel2_stac.mapchete  sentinel2_stac_area.mapchete  sentinel2_stac_cloud_cover.mapchete  sentinel2_stac_footprint_buffer.mapchete  sentinel2_time_ranges.mapchete  stac.mapchete
tests/testdata/l2a_metadata/: metadata.xml  (+1 more)
(+703 files in other folders)
