[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapchete-eo"
dynamic = ["version"]
description = "mapchete EO data reader"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Joachim Ungar", email = "joachim.ungar@eox.at" },
    { name = "Petr Sevcik", email = "petr.sevcik@eox.at" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "click",
    "croniter",
    "lxml",
    "mapchete>=2023.9.1",
    "pydantic",
    "pystac[urllib3]==1.8.2",
    "pystac-client==0.7.2",
    "rtree",
    "tqdm",
    "xarray",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-coverage",
    "pytest-lazy-fixture",
    "mapchete_xarray",
]

[project.entry-points."mapchete.cli.commands"]
eo = "mapchete_eo.cli.main:eo"

[project.entry-points."mapchete.formats.drivers"]
eostac_dev = "mapchete_eo.eostac"
sentinel2 = "mapchete_eo.platforms.sentinel2"

[project.entry-points."mapchete.processes"]
dtype_scale = "mapchete_eo.processes.dtype_scale"

[project.urls]
Homepage = "https://gitlab.eox.at/maps/mapchete_eo"

[tool.hatch.version]
path = "mapchete_eo/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/mapchete_eo",
]

[tool.mypy]
ignore_missing_imports = true